[package]
name = "piksels-core"
version = "0.0.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "Low-level strongly typed graphics system"
readme = "../README.md"
repository = "https://github.com/phaazon/piksels"
license = "BSD-3-Clause"
keywords = ["graphics", "rendering"]
categories = ["graphics", "rendering::graphics-api"]
publish = false

[dependencies.piksels-backend]
version = "0.0.0"
path = "../piksels-backend"
